scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment35.errors.txt
bug26877.js(1,13): error TS2503: Cannot find namespace 'Emu'.


==== bug26877.js (1 errors) ====
    /** @param {Emu.D} x */
                ~~~
!!! error TS2503: Cannot find namespace 'Emu'.
    function ollKorrect(x) {
        x._model
        const y = new Emu.D()
        const z = Emu.D._wrapperInstance;
    }
    Emu.D = class {
        constructor() {
            this._model = 1
        }
    }
    
==== second.js (0 errors) ====
    var Emu = {}
    /** @type {string} */
    Emu.D._wrapperInstance;
    
    